--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECRET_KEY = 'django-insecure-%0!yx*tp5zbw3+x9bu)yqtgd3!=a@szi__d9$183=qls$i6516'
 DEBUG = True
+GMAIL_ACCOUNT = hollyman784@gmail.com
+GMAIL_PASSWORD = cdsa xlao zbtc jfcr
